fix: resolve hidden body content issue on safari browser

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -18,6 +18,7 @@
 
 .bodyContainer {
   height: calc(100vh - 60px);
+  height: calc(-webkit-fill-available - 60px);
   width: 100%;
   margin-top: 55px;
   overflow-y: auto;
